Home working without style

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,24 @@
-// TODO
+.container {
+
+}
+
+.headerTitle {
+
+}
+
+.posts {
+
+}
+
+.subtitle {
+
+}
+
+.publicationDate {
+
+}
+
+.author {
+
+}
+
