--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,50 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --magenta-50: #FF57B2;
+  --gray-90: #1A1D23;
+  --gray-30: #BBBBBB;
+  --gray-20: #D7D7D7;
+  --gray-10: #F8F8F8;
+}
+
+body, input, textarea, select, button {
+  font: 400 1rem 'Inter', sans-serif;
+}
+
+body {
+  background: var(--gray-90);
+  color: var(--gray-20);
+}
+
+.highlight {
+  color: var(--magenta-50);
+}
+
+.info {
+  color: var(--gray-30);
+}
+
+h1 {
+  color: var(--gray-10);
+  font-size: 2rem;
+}
+
+h2 {
+  color: var(--gray-20);
+  font-size: 1.5rem;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+article {
+  margin: 10px 0px;
+}
