--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,15 +10,18 @@
   --gray-30: #BBBBBB;
   --gray-20: #D7D7D7;
   --gray-10: #F8F8F8;
+
+  --page-width: 1120px;
 }
 
 body, input, textarea, select, button {
-  font: 400 1rem 'Inter', sans-serif;
+  font: 400 14px 'Inter', sans-serif;
 }
 
 body {
   background: var(--gray-90);
   color: var(--gray-20);
+  margin: 80px 370px;
 }
 
 .highlight {
@@ -31,12 +34,15 @@ body {
 
 h1 {
   color: var(--gray-10);
+  line-height: 34px;
+  font-weight: 700;
   font-size: 2rem;
 }
 
 h2 {
   color: var(--gray-20);
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  margin-top: 10px;
 }
 
 button {
@@ -49,11 +55,6 @@ a {
 }
 
 article {
-  margin: 10px 0px;
+  margin: 3rem 0px;
 }
 
-.button-highlight {
-  border: 0;
-  background-color: transparent;
-  color: var(--magenta-50)
-}
