--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,33 @@
+.container {
+  width: 1120px;
+}
 
+.publicationDate {
+  display: flex;
+  gap: 5px;
+}
+
+.author {
+  display: flex;
+  gap: 5px;
+}
+
+.timeAvailable {
+  display: flex;
+  gap: 5px;
+}
+
+.buttonHighlight {
+  border: 0;
+  background-color: transparent;
+  color: var(--magenta-50)
+}
+
+.articleFooter {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
