Fixing fallback test

--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -22,6 +22,10 @@
     }
   }
 
+  .postContent {
+    width: var(--page-width);
+  }
+
   .postTitle {
     font-weight: 700;
     font-size: 2rem;
